--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Uncharted</string>
-    <string name="title_activity_maps">MapActivity</string>
+    <string name="title_activity_maps"></string>
     <string name="title_activity_drawer">DrawerActivity</string>
     <string name="title_activity_group">GroupActivity</string>
 
@@ -21,5 +21,6 @@
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
 
+    <string name="str_atv_places">Explore...</string>
 
 </resources>
