--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="title_activity_maps"></string>
     <string name="title_activity_drawer">DrawerActivity</string>
     <string name="title_activity_group">GroupActivity</string>
+    <string name="title_activity_myresource">My Resources</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
