--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,11 @@
 <resources>
-    <string name="app_name">Uncharted</string>
+    <string name="app_name">CrowdForce</string>
     <string name="title_activity_maps"></string>
     <string name="title_activity_drawer">DrawerActivity</string>
     <string name="title_activity_group">GroupActivity</string>
     <string name="title_activity_myresource">My Inventory</string>
+    <string name="title_activity_crafting">Crafting</string>
+    <string name="title_activity_main">CrowdForce</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -12,7 +14,7 @@
 
     <string name="facebook_app_id">609755152555265</string>
 
-    <string name="title_activity_main">MainActivity</string>
+
 
     <string name="login_server_protocol">http</string>
     <string name="login_server_host">crowdclashlogin.ddns.net</string>
