--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
 
 
     <string name="login_server_protocol">http</string>
-    <string name="login_server_host">crowdclashlogin.ddns.net</string>
+    <string name="login_server_host">104.131.61.222</string>
     <string name="login_server_places_endpoint">places.json</string>
     <string name="login_server_login_endpoint">api/login/id</string>
     <string name="login_server_token_parameter">token</string>
@@ -27,5 +27,7 @@
     <string name="login_error">Login Error</string>
     <string name="problem_with_facebook">Problem communicating with Facebook</string>
     <string name="login_server_places_error">Could not fetch places data from server</string>
+
+    <!-- crowdclashlogin.ddns.net -->
 
 </resources>
