--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,10 +23,18 @@
     <string name="login_server_token_parameter">token</string>
     <string name="login_server_connection_error">Problem authenticating with login server</string>
 
+    <string name="server_new_group_endpoint">api/groups/new</string>
+    <string name="server_group_members_endpoint">api/groups/members</string>
+    <string name="server_user_by_facebook_id_endpoint">api/users/facebookId</string>
+
     <string name="str_atv_places">Explore...</string>
     <string name="login_error">Login Error</string>
     <string name="problem_with_facebook">Problem communicating with Facebook</string>
     <string name="login_server_places_error">Could not fetch places data from server</string>
+    <string name="group_error">Could not modify group</string>
+    <string name="unable_to_talk_to_server">Could not talk to server</string>
+    <string name="server_group_endpoint">api/groups</string>
+
 
     <!-- crowdclashlogin.ddns.net -->
 
